# nibbler

./: .gitignore  CMakeLists.txt  Makefile  Nibbler  README.md  setup.sh
Bonus/: Game_bns.cpp  NcursesDisplay.cpp  Nibbler_bns.cpp  SdlDisplay.cpp  SfmlDisplay.cpp  Snake_bns.cpp
Bonus/Maps/: Base.txt  EasyPacMan.txt  PacMan.txt
Includes/: Game.hpp  IDisplay.hpp  NcursesDisplay.hpp  Nibbler.hpp  SdlDisplay.hpp  SfmlDisplay.hpp  Snake.hpp  Types.hpp
Includes_bns/: Game_bns.hpp  IDisplay.hpp  NcursesDisplay.hpp  SdlDisplay.hpp  SfmlDisplay.hpp  Snake_bns.hpp  Types_bns.hpp
Src/: Game.cpp  NcursesDisplay.cpp  Nibbler.cpp  SdlDisplay.cpp  SfmlDisplay.cpp  Snake.cpp
